# univ_tents

./: CMakeLists.txt  README.md  game.c  game_aux.c  game_solve.c  game_test.c  game_text.c  game_tools.c  private.c
data/: game_20x20.tnt  game_25x25.tnt  game_30_30.tnt  game_30_30wd.tnt  game_nb_sol4.tnt  test.tnt
header/: game.h  game_aux.h  game_tools.h  private.h
